update `kitty` and `tmux` configs

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,6 +3,7 @@ include dracula.conf
 window_margin_width 2
 window_margin_height 2
 
+font_family MesloLGS NF
 font_size 12.0
 
 scrollback_lines 10000
