--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,4 +24,4 @@ set -g status-right "%H:%M  %d/%m/%Y "
 set -g status-right-style bg=#282a36,fg=#f8f8f2
 
 # Inicializar TMUX plugin manager (deve ser a última linha)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
